add labels, change  font color for input fields, and error message box, and remove unused select, change a cursor for add,remove vip

--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
       <aside class="form">
   
         <form id="form">
-          <label>
-
+          <label for="name">
+            Name
             <input type="text" name="name" id="name" />
           </label>
-          <label>
-
+          <label for="isVip">
+            is VIP?
             <select name="isVip" id="isVip">
-              <option value=""></option>
               <option value="yes">Yes</option>
               <option value="no">No</option>
             </select>
